# lumina-mono

./: .gitignore  .npmrc  AGENTS.md  CLAUDE.md  LICENSE  README.md  SCREENSHOTS.md  docker-compose.override.yml.bak  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
python/lumina/: README.md  pyproject.toml
python/lumina/lumina/: __init__.py  __init__.pyi  __init__.template.pyi  __main__.py  _analytics.py  _iterutils.py  _strutils.py  data_types.py  env.py  jupyter.py  sklearn.py  trigger.py  util.py  wandb_agent.py  wandb_controller.py  wandb_run.py
python/lumina/lumina/_pydantic/: __init__.py  base.py  field_types.py  pagination.py  utils.py
python/lumina/lumina/agents/: __init__.py  agent.py  job.py  pyagent.py  run.py
python/lumina/lumina/analytics/: __init__.py  sentry.py
python/lumina/lumina/apis/: __init__.py  attrs.py  internal.py  normalize.py  paginator.py
python/lumina/lumina/automations/: __init__.py  _utils.py  _validators.py  actions.py  automations.py  events.py  integrations.py  scopes.py
python/lumina/lumina/backend/: __init__.py  artifact.py  client.py  evaluation.py  launch.py  media.py  model_registry.py  public_api.py  report.py  run.py  run_context.py  sweep.py  torch_watch.py  trace.py
python/lumina/lumina/cli/: beta.py  beta_core.py  beta_sandbox.py  beta_sync.py  cli.py  demo.py  leet.py
python/lumina/lumina/docker/: __init__.py  (+1 more)
python/lumina/tests/: fake_backend.py  test_artifact.py  test_cli_agents.py  test_launch.py  test_media_extra.py  test_run_stubs.py  test_sender.py  test_sweep.py
(+1019 files in other folders)
