[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wandb"
version = "0.28.2.dev1"
description = "A Python SDK for experiment tracking and machine learning operations. Based on WandB."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [
    { name = "Lumina Contributors" }
]
keywords = ["ml", "machine-learning", "experiment-tracking", "wandb"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=7.1",
    "docker-pycreds>=0.4.0",
    "gitpython>=1.0.0",
    "platformdirs",
    "protobuf>=3.19.0",
    "psutil>=5.0.0",
    "pydantic>=2.0.0",
    "pyyaml",
    "requests>=2.0.0",
    "sentry-sdk>=1.0.0",
    "setuptools",
]

[project.scripts]
wandb = "wandb.cli.cli:cli"
wandb-docker-run = "wandb.cli.cli:docker_run"

[project.urls]
Homepage = "https://github.com/lumina/lumina"
Repository = "https://github.com/lumina/lumina"

[tool.hatch.build.targets.wheel]
packages = ["lumina/wandb"]

[tool.hatch.build]
artifacts = [
    "lumina/wandb/**/*.py",
    "lumina/wandb/**/*.pyi",
]
